--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
     <div class="text-align rellax" data-rellax-percentage="0.5" data-rellax-speed="-5">
         <img class="logo" src="img/logo.png">
-        <h1></h1>
+        <h1>Ukus prepoznatljivog kvaliteta</h1>
     </div>
     
 </div>
